force-app/main/default/objects/Lease__c/Lease__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Rental lease agreements and contract management</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Lease</label><nameField><label>Lease Number</label><type>AutoNumber</type><displayFormat>LSE-{00000}</displayFormat><startingNumber>1</startingNumber></nameField><pluralLabel>Leases</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>