force-app/main/default/objects/Lease__c/fields/Lease_End_Date__c.field-meta.xml
<CustomField><fullName>Lease_End_Date__c</fullName><description>Lease agreement end date</description><externalId>false</externalId><label>Lease End Date</label><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Date</type></CustomField>