force-app/main/default/objects/Lease__c/fields/Lease_Start_Date__c.field-meta.xml
<CustomField><fullName>Lease_Start_Date__c</fullName><description>Lease agreement start date</description><externalId>false</externalId><label>Lease Start Date</label><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Date</type></CustomField>