force-app/main/default/objects/Lease__c/fields/Lease_Status__c.field-meta.xml
<CustomField><fullName>Lease_Status__c</fullName><description>Current status of the lease</description><externalId>false</externalId><label>Lease Status</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>false</default><label>Draft</label></value><value><fullName>Active</fullName><default>true</default><label>Active</label></value><value><fullName>Renewal Pending</fullName><default>false</default><label>Renewal Pending</label></value><value><fullName>Terminated</fullName><default>false</default><label>Terminated</label></value><value><fullName>Expired</fullName><default>false</default><label>Expired</label></value></valueSetDefinition></valueSet></CustomField>