force-app/main/default/objects/Lease__c/fields/Monthly_Rent__c.field-meta.xml
<CustomField><fullName>Monthly_Rent__c</fullName><description>Monthly rent amount for this lease</description><externalId>false</externalId><label>Monthly Rent</label><precision>18</precision><required>true</required><scale>2</scale><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Currency</type></CustomField>