force-app/main/default/objects/Lease__c/fields/Tenant__c.field-meta.xml
<CustomField><fullName>Tenant__c</fullName><description>Primary tenant on the lease</description><externalId>false</externalId><label>Tenant</label><referenceTo>Tenant__c</referenceTo><relationshipLabel>Leases</relationshipLabel><relationshipName>Leases</relationshipName><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Lookup</type></CustomField>