force-app/main/default/objects/Lease__c/fields/Unit__c.field-meta.xml
<CustomField><fullName>Unit__c</fullName><description>Unit covered by this lease</description><externalId>false</externalId><label>Unit</label><referenceTo>Unit__c</referenceTo><relationshipLabel>Leases</relationshipLabel><relationshipName>Leases</relationshipName><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Lookup</type></CustomField>